--- a/Mock/userCreate.html
+++ b/Mock/userCreate.html
@@ -50,7 +50,7 @@
 		 	 </div>
 		 	 <div class="form-group">
 		   	 	<label class="col-form-label" for="birth">生年月日</label>
-		   	 	<input type="text" class="form-control" id="birth" placeholder="生年月日を入力" required>
+		   	 	<input type="date" class="form-control" id="birth" placeholder="生年月日を入力" required>
 		 	 </div>
 		 	 <div class="col-sm-12 new-ragistration">
 		 	 	<button type="submit" class="btn btn-success btn-lg">登録</button>
