--- a/Mock/userUpdate.html
+++ b/Mock/userUpdate.html
@@ -49,7 +49,7 @@
 		 	 </div>
 		 	 <div class="form-group">
 		   	 	<label class="col-form-label" for="birth">生年月日</label>
-		   	 	<input type="text" class="form-control" id="birth" placeholder="生年月日を入力" required>
+		   	 	<input type="date" class="form-control" id="birth" placeholder="生年月日を入力" required>
 		 	 </div>
 		 	 <div class="col-sm-12 new-ragistration">
 		 	 	<button type="submit" class="btn btn-info btn-lg">更新</button>
